--- a/Index.html
+++ b/Index.html
@@ -181,12 +181,12 @@
                 <div class="who-card">
                     <h3 class="who-title">Government & Public Sector</h3>
                     <p class="who-description">Procurement, oversight, tax, social services: workflows that must survive public and legal scrutiny.</p>
-                    <a href="pages/solutions/government.html" class="btn btn-secondary-small">Explore →</a>
+                    <a href="pages/solutions/government.html" class="who-link">Explore →</a>
                 </div>
                 <div class="who-card">
                     <h3 class="who-title">Regulated Enterprises</h3>
                     <p class="who-description">Banks, insurers, utilities, healthcare: automation that must respect compliance and audit obligations.</p>
-                    <a href="pages/solutions/critical-infrastructure.html" class="btn btn-secondary-small">Explore →</a>
+                    <a href="pages/solutions/critical-infrastructure.html" class="who-link">Explore →</a>
                 </div>
             </div>
             
