--- a/pages/platform/security.html
+++ b/pages/platform/security.html
@@ -14,7 +14,6 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../../css/main.css">
     <link rel="stylesheet" href="../../css/components.css">
-    <link rel="stylesheet" href="../../css/pages.css">
     <link rel="stylesheet" href="../../css/responsive.css">
     <link rel="stylesheet" href="../../css/security.css">
 
@@ -338,7 +337,7 @@
         </div>
         
         <div class="footer-legal">
-            <a href="../../pages/legal/privacy-policy.html">Privacy & Legal</a>
+            <a href="../../pages/legal/privacy.html">Privacy & Legal</a>
         </div>
         
         <div class="footer-bottom">
