--- a/pages/solutions/critical-infrastructure.html
+++ b/pages/solutions/critical-infrastructure.html
@@ -16,7 +16,6 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../../css/main.css">
     <link rel="stylesheet" href="../../css/components.css">
-    <link rel="stylesheet" href="../../css/pages.css">
     <link rel="stylesheet" href="../../css/responsive.css">
     <link rel="stylesheet" href="../../css/critical-infrastructure.css">
 
@@ -422,7 +421,7 @@
         </div>
         
         <div class="footer-legal">
-            <a href="../../pages/legal/privacy-policy.html">Privacy & Legal</a>
+            <a href="../../pages/legal/privacy.html">Privacy & Legal</a>
         </div>
         
         <div class="footer-bottom">
