--- a/pages/solutions/government.html
+++ b/pages/solutions/government.html
@@ -15,7 +15,6 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../../css/main.css">
     <link rel="stylesheet" href="../../css/components.css">
-    <link rel="stylesheet" href="../../css/pages.css">
     <link rel="stylesheet" href="../../css/responsive.css">
     <link rel="stylesheet" href="../../css/government.css">
 
@@ -369,7 +368,7 @@
         </div>
         
         <div class="footer-legal">
-            <a href="../../pages/legal/privacy-policy.html">Privacy & Legal</a>
+            <a href="../../pages/legal/privacy.html">Privacy & Legal</a>
         </div>
         
         <div class="footer-bottom">
